--- a/style.css
+++ b/style.css
@@ -6,19 +6,25 @@
 }
 :root{
     --branco: white;
-    --preto: black;
-    --teste: #1F163D;
+    --preto: rgb(0, 0, 0);
+    --transparent: transparent;
     --azul-botao: #14CDFF;
-    --laranja_contraste: #d49b7f;
+    --azul_contraste: #03a2ff;
 }
 header{
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0.4rem;
-    background-color: var(--teste);
+    background-color: var(--transparent);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000%;
+    backdrop-filter: blur(4px);
 }
-.m_header_home a{
+.f_header_home a{
     display: flex;
     align-items: center;
     color: var(--branco);
@@ -27,46 +33,46 @@ header{
     font-size: 70%;
     font-family: "Jersey 20", sans-serif;
 }
-.m_header_home a img{
+.f_header_home a img{
     width: 2rem;
 }
-.m_header_nav{
+.f_header_nav{
     display: flex;
     gap: 1rem;
 }
-.m_header_a{
+.f_header_a{
     color: var(--branco);
     font-family: "Jersey 20", sans-serif;
     text-decoration-thickness: 0.5px;
     text-underline-offset: 3px;
 }
-.m_header_a:hover{
-    color: var(--laranja_contraste);
+.f_header_a:hover{
+    color: var(--azul_contraste);
     text-shadow:
-        0 0 6px var(--laranja_contraste),
-        0 0 20px var(--laranja_contraste),
-        0 0 40px var(--laranja_contraste);
+        0 0 6px var(--azul_contraste),
+        0 0 20px var(--azul_contraste),
+        0 0 40px var(--azul_contraste);
 }
-.m_header_marcado{
+.f_header_marcado{
     color: var(--azul-botao);
     text-shadow:
         0 0 6px var(--azul-botao),
         0 0 20px var(--azul-botao),
         0 0 40px var(--azul-botao);
 }
-.m_header_marcado:hover{
+.f_header_marcado:hover{
     color: var(--azul-botao);
 }
-.m_header_direito{
+.f_header_direito{
     display: flex;
     align-items: center;
     gap: 1rem;
 }
-.m_header_direito a{
+.f_header_direito a{
     display: flex;
     align-items: center;
 }
-.m_header_botao_login{
+.f_header_botao_login{
     color: var(--preto);
     background-color: var(--azul-botao);
     text-decoration: none;
@@ -76,13 +82,38 @@ header{
     border-radius: 1rem;
     box-shadow: 1px 1px 3px var(--azul-botao), 0 0 5px var(--azul-botao);
 }
-.m_header_botao_login:hover{
-    background-color: var(--laranja_contraste);
-    box-shadow: 1px 1px 3px var(--laranja_contraste), 0 0 5px var(--laranja_contraste);
+.f_header_botao_login:hover{
+    background-color: var(--azul_contraste);
+    box-shadow: 1px 1px 3px var(--azul_contraste), 0 0 5px var(--azul_contraste);
 }
-.m_header_lupa{
+.f_header_lupa{
     width: 1rem;
 }
-.m_header_menu{
+.f_header_menu{
     width: 1.5rem;
+}
+.f_body{
+    margin: 0;
+    padding: 0;
+    min-height: 300vh;
+    background-color: #06060b;
+    position: relative;
+}
+
+.f_body::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("img/fundo_home.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    opacity: 0.2;
+    z-index: -1; 
+}
+.f_main{
+    padding-top: 80px;
 }
